# labdb-new

./: .gitignore  Cargo.toml  Dockerfile  Procfile  build.sbt  cloudbuild.yml  deploy.nu  go.mod  go.sum  labdb.go
auth/: auth.go
env/: env.go
models/: antibody.go  bacterium.go  db.go  line.go  oligo.go  plasmid.go  resource.go  rnaiclone.go  sample.go  seqlib.go  user.go  yeaststrain.go
project/: plugins.sbt
routes/: helpers.go  routes.go
search/: search.go
src/: auth.rs  db.rs  env.rs  errors.rs  lib.rs  proxy.rs  search.rs
src/main/scala/: ScalatraBootstrap.scala
src/main/scala/org/labdb/labdb/: Env.scala  LabdbMain.scala  Main.scala  Proxy.scala
src/main/webapp/WEB-INF/: web.xml
src/models/: antibody.rs  bacterial_strain.rs  cell_line.rs  dino.rs  mod.rs  oligo.rs  plasmid.rs  rnai_clone.rs  sample.rs  seq_lib.rs  user.rs  yeast_strain.rs
tools/: genroutes.go
tools/templates/: allroutes.go.template  routes.go.template
