[package]
name = "labdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.10"
axum-macros = "0.3.5"
axum-sessions = "0.4.1"
base64 = "0.21.0"
chrono = { version = "0.4.3", features = ["serde"] }
fern = "0.6.1"
hex = "0.4.3"
hmac = "0.12.1"
http-body = "0.4.5"
hyper = { version = "0.14.24", features = ["client", "http1"] }
hyper-rustls = { version = "0.23.2", features = ["webpki-tokio", "http1", "tls12", "logging"], default_features = false }
jwt-simple = "0.11.4"
log = "0.4.17"
once_cell = "1.17.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "rustls-tls-webpki-roots"], default_features = false }
serde = "1.0.152"
serde_json = "1.0.93"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "chrono", "postgres"] }
tokio = { version = "1.26.0", features = ["full"] }
urlencoding = "2.1.2"
